[package]
name = "chip_huit"
version = "0.1.0"
authors = ["ityt <imran.tierce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34"
rand = "0.7"
piston = "0.52"
piston2d-graphics = "0.37"
pistoncore-glutin_window = "0.66"
piston2d-opengl_graphics = "0.74"
vulkano = "0.19"
vulkano-shaders = "0.19"
vulkano-win = "0.19"
winit = "0.22"